[package]
name = "solana-token-sniper"
version = "1.0.0"
edition = "2021"
authors = ["Token Sniper Bot"]
description = "High-speed Solana token sniper with RugCheck security and Telegram notifications"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"   
dotenv = "0.15"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
solana-sdk = "1.16"
solana-client = "1.16"
bs58 = "0.4"
rand = "0.8"
once_cell = "1.19"
base64 = "0.21"
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
